# batch2p

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
arduino/: Teensy41_totalsync.ino
batch2p/: __init__.py  cli.py  gui.py  multi.py
batch2p/extractors/: __init__.py  base.py  suite2p.py  suite3d.py
docs/: batch2p.md  batch2p_gui.md  batch2p_multi.md  data.json  data_suite2p.json  data_suite3d.json  job1.sh  job1.sh.in  params_default_suite2p.json  params_default_suite2p_minimal.json  params_default_suite3d.json  pinSheet.json  pinSheet.md  pinSheet_2026.json  suite3d_saved_outputs.md  suite3d_summary.md  suite3dbatch.md
notebooks/: Behavioral_Analyses_Pilot.ipynb  analysis_workflow.ipynb  check_tif_files.ipynb  data_synchronization.ipynb  data_synchronization_barcode.ipynb  data_synchronization_barcode_dev.ipynb  suite2p.ipynb  suite3dpreprocessing.ipynb  sync_tests_220626.ipynb  test_synced_outputs.ipynb  totalsync_decode.ipynb
ofl_2p_analysis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
previous_work/: AuxSyncV4.ipynb  data_synchronization.ipynb  data_synchronization_barcode.ipynb  functionsRunningSpeed.py  logfile_check.ipynb  singleSessionAnalysis.py  singleSessionFunctions.py  suite2p.ipynb  suite3dpreprocessing.ipynb  totalsync_decode.ipynb
scripts/: batch2p_run.py  compute_F_sub.py  population_averages_perday.py  suite3dbatch.py  suite3dpreprocessing.py
suite3dbatch/: __init__.py  cli.py
totalsync_2p/: __init__.py  cli.py  sync.py
totalsync_utils/: __init__.py  __main__.py  cli.py  decoder.py
