[project]
name = "batch2p"
version = "0.1.1"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pynapple",
    "tifffile",
    "suite2p",
    "tifftrim",
    "totalsync-utils",
    "totalsync-2p",
    "pyqtgraph>=0.14.0",
    "qtpy>=2.4.3",
    "superqt>=0.8.2",
    "rastermap>=1.0",
    "pyqt5>=5.15.11",
]
authors = [
    { name="Francesco P. Battaglia", email = ""},
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
gui = [
    "PyQt5",
    "pyqtgraph",
    "qtpy",
    "superqt",
    "rastermap",
]
[project.scripts]
batch2p = "batch2p.cli:main"
batch2p-gui = "batch2p.gui:main"
batch2p-multi = "batch2p.multi:main"
batch2p-compute-fsub = "batch2p.compute_F_sub:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["batch2p"]

[tool.uv]
constraint-dependencies = ["torch>=2.0", "llvmlite>=0.39", "numba>=0.56", "suite2p>=1.1.0", "numpy==2.3.5", "totalsync-2p>=0.1.1"]

# [tool.uv.sources]
# suite3d = { path = "../suite3d" }
# tifftrim = { path = "../TIFFTrim" }

# batch2p.cli imports totalsync_2p.sync.synchronize, which lives in ignore/.
# To make that import work after a fresh "uv sync", give ignore/totalsync_2p its
# own pyproject.toml and uncomment:
# totalsync-2p = { path = "ignore/totalsync_2p" }
